metadata/force-app/main/default/objects/ccrz__E_Review__c/fields/ccrz__LikeCount__c.field-meta.xml
<CustomField>
    <fullName>ccrz__LikeCount__c</fullName>
    <description>Number of persons think this review this helpful.</description>
    <label>Like Count</label>
    <summaryFilterItems>
        <field>ccrz__E_ReviewLike__c.ccrz__Like__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>ccrz__E_ReviewLike__c.ccrz__Review__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>