metadata/force-app/main/default/objects/ccrz__E_Review__c/fields/ccrz__RatingCode__c.field-meta.xml
<CustomField>
    <fullName>ccrz__RatingCode__c</fullName>
    <label>Rating Code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <default>true</default>
                <label>1</label>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>