metadata/force-app/main/default/objects/ccrz__E_Review__c/fields/ccrz__ReviewDate__c.field-meta.xml
<CustomField>
    <fullName>ccrz__ReviewDate__c</fullName>
    <defaultValue>Today()</defaultValue>
    <description>Review Date</description>
    <label>Review Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>