metadata/force-app/main/default/objects/ccrz__E_Review__c/fields/ccrz__User__c.field-meta.xml
<CustomField>
    <fullName>ccrz__User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User ID</description>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>E_Reviews</relationshipName>
    <type>Lookup</type>
</CustomField>