metadata/force-app/main/default/objects/ccrz__E_Review__c/fields/ccrz__UserReview__c.field-meta.xml
<CustomField>
    <fullName>ccrz__UserReview__c</fullName>
    <description>User Review</description>
    <label>User Review</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>